tests/functional/lang/eval-fail-symmetric-div-abort-abort.err.exp
error:
       … while calling the 'div' builtin
         at /pwd/lang/eval-fail-symmetric-div-abort-abort.nix:1:1:
            1| builtins.div (abort "x") (abort "y")
             | ^
            2|

       … while calling the 'abort' builtin
         at /pwd/lang/eval-fail-symmetric-div-abort-abort.nix:1:15:
            1| builtins.div (abort "x") (abort "y")
             |               ^
            2|

       error: evaluation aborted with the following error message: 'x'
